--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
       background: #ffe6f0;
       text-align: center;
       padding: 50px;
+      overflow: hidden;
     }
+
+    h2 { color: #d6336c; }
 
     .envelope {
       width: 300px;
       height: 200px;
       background: #ff9bb5;
-      margin: auto;
+      margin: 100px auto;
       position: relative;
       cursor: pointer;
       border-radius: 10px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      animation: idle 3s infinite;
     }
 
     .flap {
@@ -29,8 +33,16 @@
       height: 100%;
       background: #ff7fa3;
       clip-path: polygon(0 0, 100% 0, 50% 60%);
-      transition: transform 1s;
       transform-origin: top;
+      transition: transform 1s;
+    }
+
+    .open {
+      animation: chest 1.2s forwards;
+    }
+
+    .open .flap {
+      transform: rotateX(180deg);
     }
 
     .letter {
@@ -43,20 +55,27 @@
       animation: fadeIn 1.5s;
     }
 
-    .open .flap {
-      transform: rotateX(180deg);
-    }
-
     .open + .letter {
       display: block;
     }
-
-    h1 { color: #d6336c; }
 
     img {
       width: 100%;
       border-radius: 10px;
       margin-top: 15px;
+    }
+
+    @keyframes chest {
+      0%   { transform: scale(1) rotate(0deg); }
+      30%  { transform: scale(1.2) rotate(2deg); }
+      50%  { transform: scale(1.3) rotate(-2deg); }
+      70%  { transform: scale(1.2) rotate(2deg); }
+      100% { transform: scale(1) rotate(0deg); }
+    }
+
+    @keyframes idle {
+      0%,100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
     }
 
     @keyframes fadeIn {
@@ -67,21 +86,21 @@
 </head>
 <body>
 
-  <h2>Haz click en la carta 💌</h2>
+<h2>Haz click en la carta 💌</h2>
 
-  <div class="envelope" onclick="this.classList.add('open')">
-    <div class="flap"></div>
-  </div>
+<div class="envelope" onclick="this.classList.add('open')">
+  <div class="flap"></div>
+</div>
 
-  <div class="letter">
-    <h1>Hola mi amor 💕</h1>
-    <img src="foto.jpg">
-    <p>
-      Esta pagina es solo para ti.<br>
-      Gracias por estar conmigo.<br>
-      Te quiero mas de lo que estas palabras pueden decir.
-    </p>
-  </div>
+<div class="letter">
+  <h1>Hola mi amor 💕</h1>
+  <img src="foto.jpg">
+  <p>
+    Esta pagina es solo para ti.<br>
+    Gracias por estar conmigo.<br>
+    Te quiero mas de lo que estas palabras pueden decir.
+  </p>
+</div>
 
 </body>
 </html>
