--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ img {
 
 <div class="letter" id="letter">
   <div class="card">
-    <h1>Hola mi amor 💕</h1>
+    <h1>Sorpresa 💕</h1>
     <img src="foto.jpg">
     <p id="type"></p>
   </div>
@@ -122,9 +122,7 @@ img {
 <audio id="music" src="musica.mp3" loop></audio>
 
 <script>
-const text = `Esta pagina es solo para ti.
-Gracias por estar conmigo.
-Te quiero mas de lo que estas palabras pueden decir.`;
+const text = `holiwis uwu, sorpresita`;
 
 let i = 0;
 const speed = 40;
