--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ img {
 <audio id="music" src="musica.mp3" loop></audio>
 
 <script>
-const text = `holiwis uwu, sorpresita`;
+const text = `prueba de typewriter effect, hola, HOLA 1 2 3 4 5 6 7 8 9 0`;
 
 let i = 0;
 const speed = 40;
