--- a/index.html
+++ b/index.html
@@ -8,131 +8,234 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background: #f8b4c6;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: background 2s;
+  padding: 20px;
+  overflow-x: hidden;
+  transition: background 1.5s ease;
 }
 
-/* CONTENEDOR CARTA */
-.container {
-  position: relative;
+body.opened {
+  background-color: #111;
+  background-image:
+    repeating-linear-gradient(45deg, #ff6f9133 0 2px, transparent 2px 20px),
+    repeating-linear-gradient(-45deg, #8bd3c733 0 2px, transparent 2px 20px);
+}
+
+/* TEXTO HINT */
+.hint {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 30px;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  animation: float 2s infinite;
+  transition: all 0.8s;
+}
+
+.hint.hide {
+  opacity: 0;
+  transform: translateY(-30px);
+}
+
+@keyframes float {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-8px); }
+}
+
+/* CONTENEDOR SOBRE */
+.envelope-container {
   width: 320px;
   height: 220px;
+  position: relative;
   cursor: pointer;
+  margin-bottom: 50px;
+  z-index: 2;
 }
 
 /* SOBRE */
 .envelope {
-  position: absolute;
   width: 100%;
   height: 100%;
   background: #ff6f91;
   border-radius: 8px;
+  position: relative;
   overflow: hidden;
+  box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+  transition: transform 0.3s;
+  animation: idle 3s infinite ease-in-out;
 }
 
-.envelope::before {
-  content: "";
+.envelope:hover {
+  transform: scale(1.02);
+}
+
+@keyframes idle {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+}
+
+/* SOLAPA DEL SOBRE */
+.flap {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: #ff8fab;
-  transform: rotate(45deg);
-  top: -60%;
-  left: 0;
+  clip-path: polygon(0 0, 100% 0, 50% 50%);
+  transform-origin: top center;
+  transition: transform 1.2s ease;
+  z-index: 3;
 }
 
-/* TEXTO CLICK */
-.click-text {
-  position: absolute;
-  top: -40px;
-  width: 100%;
-  text-align: center;
-  color: white;
-  animation: float 2s infinite;
+.envelope-container.open .envelope {
+  animation: chest 1s forwards;
 }
 
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-8px); }
+.envelope-container.open .flap {
+  transform: rotateX(180deg);
+}
+
+@keyframes chest {
+  0% { transform: scale(1); }
+  30% { transform: scale(1.1) rotate(2deg); }
+  50% { transform: scale(1.15) rotate(-2deg); }
+  70% { transform: scale(1.1) rotate(2deg); }
+  100% { transform: scale(1); }
 }
 
 /* CARTA */
 .letter {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #111;
-  background-image: 
-    repeating-linear-gradient(45deg, #ff6f91 0 2px, transparent 2px 20px),
-    repeating-linear-gradient(-45deg, #8bd3c7 0 2px, transparent 2px 20px);
-  top: 100%;
-  border-radius: 8px;
-  padding: 20px;
-  color: #ffd6e0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: 1.2s;
-  overflow: hidden;
+  background-color: #fefefe;
+  padding: 40px 30px;
+  border-radius: 15px;
+  max-width: 550px;
+  width: 90%;
+  margin: 0 auto;
+  box-shadow: 0 25px 50px rgba(0,0,0,0.4);
+  transform: translateY(100px);
+  opacity: 0;
+  transition: all 1.5s ease;
 }
 
-.container.open .letter {
-  top: 0;
+.letter.show {
+  transform: translateY(0);
+  opacity: 1;
 }
 
-/* TEXTO MAQUINA */
-#message {
-  min-height: 90px;
+.letter h1 {
+  color: #d6336c;
+  margin-bottom: 25px;
   text-align: center;
-  margin-bottom: 20px;
-  font-size: 18px;
+  font-size: 28px;
 }
 
-/* RAMO SVG */
+/* IMAGEN */
+.letter img {
+  width: 100%;
+  max-width: 400px;
+  display: block;
+  margin: 20px auto;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+
+/* MENSAJE CON EFECTO TYPEWRITER */
+#message {
+  color: #333;
+  font-size: 18px;
+  line-height: 1.8;
+  text-align: center;
+  min-height: 120px;
+  margin: 25px 0;
+}
+
+body.opened #message {
+  color: #ffd6e0;
+}
+
+/* RAMO DE FLORES SVG */
 .bouquet {
   width: 200px;
+  margin: 30px auto 0;
+  display: block;
+  opacity: 0;
+  animation: fadeInBouquet 2s ease forwards 1s;
+}
+
+@keyframes fadeInBouquet {
+  to { opacity: 1; }
+}
+
+.bouquet-container {
   animation: breathe 4s ease-in-out infinite;
 }
 
 @keyframes breathe {
-  0%,100% { transform: scale(1); }
-  50% { transform: scale(1.03); }
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.05); }
 }
 
 .draw {
   fill: none;
   stroke: #ff6f91;
   stroke-width: 4;
+  stroke-linecap: round;
   stroke-dasharray: 300;
   stroke-dashoffset: 300;
-  animation: drawLine 3s ease forwards;
+  animation: drawLine 3s ease forwards 0.5s;
 }
 
 @keyframes drawLine {
   to { stroke-dashoffset: 0; }
 }
+
+/* Responsive */
+@media (max-width: 600px) {
+  .envelope-container {
+    width: 280px;
+    height: 190px;
+  }
+  
+  .letter {
+    padding: 30px 20px;
+  }
+  
+  .letter h1 {
+    font-size: 24px;
+  }
+  
+  #message {
+    font-size: 16px;
+  }
+}
 </style>
 </head>
-
 <body>
 
-<div class="container" onclick="openLetter()">
-  <div class="click-text" id="clickText">Haz click en la carta</div>
-  <div class="envelope"></div>
+<h2 class="hint" id="hint">Haz click en la carta 💌</h2>
 
-  <div class="letter">
-    <div id="message"></div>
+<div class="envelope-container" id="envelopeContainer">
+  <div class="envelope">
+    <div class="flap"></div>
+  </div>
+</div>
 
-    <svg class="bouquet" viewBox="0 0 300 220">
+<div class="letter" id="letter">
+  <h1>Hola mi amor 💕</h1>
+  <img src="foto.jpg" alt="Para ti">
+  <div id="message"></div>
+  
+  <svg class="bouquet" viewBox="0 0 300 220">
+    <g class="bouquet-container">
       <line class="draw" x1="150" y1="90" x2="150" y2="200"/>
       <line class="draw" x1="130" y1="100" x2="140" y2="200"/>
       <line class="draw" x1="170" y1="100" x2="160" y2="200"/>
@@ -140,43 +243,44 @@ body {
       <circle class="draw" cx="130" cy="90" r="20"/>
       <circle class="draw" cx="170" cy="90" r="20"/>
       <circle class="draw" cx="150" cy="50" r="18"/>
-    </svg>
-  </div>
+    </g>
+  </svg>
 </div>
 
 <script>
-const text = [
-  "Esta pagina es solo para ti.",
-  "Gracias por estar conmigo.",
-  "Te quiero mas de lo que estas palabras pueden decir."
-];
+const message = `Esta pagina es solo para ti.
+Gracias por estar conmigo.
+Te quiero mas de lo que estas palabras pueden decir.`;
 
-let line = 0;
-let char = 0;
+let charIndex = 0;
 
-function openLetter() {
-  document.querySelector(".container").classList.add("open");
-  document.getElementById("clickText").style.opacity = 0;
-
-  document.body.style.background = "#111";
-
-  typeEffect();
-}
-
-function typeEffect() {
-  if (line < text.length) {
-    if (char < text[line].length) {
-      document.getElementById("message").innerHTML += text[line][char];
-      char++;
-      setTimeout(typeEffect, 60);
-    } else {
-      document.getElementById("message").innerHTML += "<br>";
-      char = 0;
-      line++;
-      setTimeout(typeEffect, 600);
-    }
+function typeWriter() {
+  if (charIndex < message.length) {
+    const char = message.charAt(charIndex);
+    document.getElementById("message").innerHTML += 
+      char === "\n" ? "<br>" : char;
+    charIndex++;
+    setTimeout(typeWriter, 60);
   }
 }
+
+document.getElementById("envelopeContainer").onclick = function() {
+  // Abrir sobre
+  this.classList.add("open");
+  
+  // Cambiar fondo
+  document.body.classList.add("opened");
+  
+  // Ocultar hint
+  document.getElementById("hint").classList.add("hide");
+  
+  // Mostrar carta después de la animación del sobre
+  setTimeout(() => {
+    document.getElementById("letter").classList.add("show");
+    // Iniciar efecto typewriter
+    setTimeout(typeWriter, 500);
+  }, 1200);
+};
 </script>
 
 </body>
