--- a/index.html
+++ b/index.html
@@ -21,13 +21,33 @@ body {
   padding: 20px;
   overflow-x: hidden;
   transition: background 1.5s ease;
+  position: relative;
+}
+
+/* Fondo con imagen de flores */
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/mnt/user-data/uploads/flores-dibujadas-mano-sobre-fondo-pizarra_23-2148391138.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 1.5s ease;
+  z-index: 0;
+  pointer-events: none;
+}
+
+body.opened::before {
+  opacity: 1;
 }
 
 body.opened {
-  background-color: #111;
-  background-image:
-    repeating-linear-gradient(45deg, #ff6f9133 0 2px, transparent 2px 20px),
-    repeating-linear-gradient(-45deg, #8bd3c733 0 2px, transparent 2px 20px);
+  background: #2a2a2a;
 }
 
 /* TEXTO HINT */
@@ -38,6 +58,8 @@ body.opened {
   text-shadow: 0 2px 10px rgba(0,0,0,0.3);
   animation: float 2s infinite;
   transition: all 0.8s;
+  z-index: 10;
+  position: relative;
 }
 
 .hint.hide {
@@ -57,7 +79,7 @@ body.opened {
   position: relative;
   cursor: pointer;
   margin-bottom: 50px;
-  z-index: 2;
+  z-index: 10;
 }
 
 /* SOBRE */
@@ -114,16 +136,20 @@ body.opened {
 
 /* CARTA */
 .letter {
-  background-color: #fefefe;
+  background: rgba(30, 30, 30, 0.95);
+  backdrop-filter: blur(10px);
   padding: 40px 30px;
   border-radius: 15px;
   max-width: 550px;
   width: 90%;
   margin: 0 auto;
-  box-shadow: 0 25px 50px rgba(0,0,0,0.4);
+  box-shadow: 0 25px 50px rgba(0,0,0,0.6);
   transform: translateY(100px);
   opacity: 0;
   transition: all 1.5s ease;
+  position: relative;
+  z-index: 10;
+  border: 2px solid rgba(255, 111, 145, 0.3);
 }
 
 .letter.show {
@@ -132,10 +158,11 @@ body.opened {
 }
 
 .letter h1 {
-  color: #d6336c;
+  color: #ff8fab;
   margin-bottom: 25px;
   text-align: center;
   font-size: 28px;
+  text-shadow: 0 2px 10px rgba(255, 111, 145, 0.5);
 }
 
 /* IMAGEN */
@@ -145,21 +172,19 @@ body.opened {
   display: block;
   margin: 20px auto;
   border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+  border: 3px solid rgba(255, 139, 171, 0.4);
 }
 
 /* MENSAJE CON EFECTO TYPEWRITER */
 #message {
-  color: #333;
+  color: #ffd6e0;
   font-size: 18px;
   line-height: 1.8;
   text-align: center;
   min-height: 120px;
   margin: 25px 0;
-}
-
-body.opened #message {
-  color: #ffd6e0;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.3);
 }
 
 /* RAMO DE FLORES SVG */
@@ -186,12 +211,13 @@ body.opened #message {
 
 .draw {
   fill: none;
-  stroke: #ff6f91;
+  stroke: #ff8fab;
   stroke-width: 4;
   stroke-linecap: round;
   stroke-dasharray: 300;
   stroke-dashoffset: 300;
   animation: drawLine 3s ease forwards 0.5s;
+  filter: drop-shadow(0 0 5px rgba(255, 139, 171, 0.6));
 }
 
 @keyframes drawLine {
@@ -268,7 +294,7 @@ document.getElementById("envelopeContainer").onclick = function() {
   // Abrir sobre
   this.classList.add("open");
   
-  // Cambiar fondo
+  // Cambiar fondo con flores
   document.body.classList.add("opened");
   
   // Ocultar hint
