--- a/index.html
+++ b/index.html
@@ -163,23 +163,26 @@ body.opened {
 /* MENSAJE CON EFECTO TYPEWRITER */
 #message {
   color: #ffd6e0;
-  font-size: 19px;
-  line-height: 1.9;
+  font-size: 18px;
+  line-height: 1.8;
   text-align: center;
-  min-height: 130px;
-  margin: 30px 0;
+  min-height: 200px;
+  margin: 30px 0 40px 0;
   text-shadow: 0 2px 5px rgba(0,0,0,0.8);
   font-weight: 400;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* RAMO DE FLORES - USANDO IMAGEN REAL */
 .bouquet-container {
-  width: 250px;
-  margin: 35px auto 0;
+  width: 150px;
+  margin: 20px auto 0;
   position: relative;
   opacity: 0;
   animation: fadeInBouquet 1s ease forwards 2s;
-  filter: drop-shadow(0 8px 20px rgba(0,0,0,0.5));
+  filter: drop-shadow(0 6px 15px rgba(0,0,0,0.5));
 }
 
 @keyframes fadeInBouquet {
@@ -208,20 +211,20 @@ body.opened {
 /* Corazones flotantes */
 .hearts {
   position: absolute;
-  top: -40px;
+  top: -35px;
   left: 0;
   width: 100%;
-  height: 50px;
+  height: 40px;
   pointer-events: none;
   z-index: 10;
 }
 
 .heart {
   position: absolute;
-  font-size: 24px;
+  font-size: 18px;
   animation: floatHeart 3.5s ease-in-out infinite;
   opacity: 0;
-  filter: drop-shadow(0 3px 8px rgba(0,0,0,0.4));
+  filter: drop-shadow(0 2px 6px rgba(0,0,0,0.4));
 }
 
 .heart:nth-child(1) {
@@ -363,11 +366,13 @@ body.opened {
   }
   
   #message {
-    font-size: 17px;
+    font-size: 16px;
+    min-height: 180px;
+    line-height: 1.7;
   }
   
   .bouquet-container {
-    width: 200px;
+    width: 120px;
   }
   
   .heart {
