--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@ body.opened {
 .letter {
   background: rgba(20, 20, 20, 0.95);
   backdrop-filter: blur(10px);
-  padding: 40px 30px;
+  padding: 35px 30px 30px 30px;
   border-radius: 20px;
-  max-width: 600px;
+  max-width: 550px;
   width: 90%;
+  min-height: 600px;
   margin: 0 auto;
   box-shadow: 0 30px 60px rgba(0,0,0,0.8);
   transform: translateY(100px);
@@ -133,6 +134,8 @@ body.opened {
   position: relative;
   z-index: 10;
   border: 3px solid rgba(255, 111, 145, 0.5);
+  display: flex;
+  flex-direction: column;
 }
 
 .letter.show {
@@ -142,7 +145,7 @@ body.opened {
 
 .letter h1 {
   color: #ff99b8;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
   text-align: center;
   font-size: 28px;
   text-shadow: 0 3px 15px rgba(255, 111, 145, 0.6);
@@ -152,9 +155,9 @@ body.opened {
 /* IMAGEN */
 .letter img {
   width: 100%;
-  max-width: 320px;
+  max-width: 300px;
   display: block;
-  margin: 20px auto;
+  margin: 0 auto 18px auto;
   border-radius: 12px;
   box-shadow: 0 8px 25px rgba(0,0,0,0.5);
   border: 3px solid rgba(255, 139, 171, 0.5);
@@ -163,22 +166,22 @@ body.opened {
 /* MENSAJE CON EFECTO TYPEWRITER */
 #message {
   color: #ffd6e0;
-  font-size: 18px;
-  line-height: 1.8;
+  font-size: 17px;
+  line-height: 1.7;
   text-align: center;
-  min-height: 200px;
-  margin: 30px 0 40px 0;
+  min-height: 220px;
+  margin: 25px 0 35px 0;
   text-shadow: 0 2px 5px rgba(0,0,0,0.8);
   font-weight: 400;
-  max-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  width: 100%;
 }
 
 /* RAMO DE FLORES - USANDO IMAGEN REAL */
 .bouquet-container {
-  width: 150px;
-  margin: 20px auto 0;
+  width: 130px;
+  margin: 15px auto 0 auto;
   position: relative;
   opacity: 0;
   animation: fadeInBouquet 1s ease forwards 2s;
@@ -357,26 +360,33 @@ body.opened {
   }
   
   .letter {
-    padding: 35px 25px;
+    padding: 30px 22px 25px 22px;
     max-width: 95%;
   }
   
   .letter h1 {
-    font-size: 26px;
+    font-size: 24px;
+    margin-bottom: 15px;
+  }
+  
+  .letter img {
+    max-width: 260px;
+    margin-bottom: 15px;
   }
   
   #message {
-    font-size: 16px;
-    min-height: 180px;
-    line-height: 1.7;
+    font-size: 15px;
+    min-height: 200px;
+    line-height: 1.6;
+    margin: 20px 0 30px 0;
   }
   
   .bouquet-container {
-    width: 120px;
+    width: 110px;
   }
   
   .heart {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 </style>
