--- a/index.html
+++ b/index.html
@@ -63,11 +63,17 @@ body.opened {
   cursor: pointer;
   margin-bottom: 50px;
   z-index: 10;
-  transition: all 0.3s;
+  transition: all 0.3s, opacity 1s 1.2s;
 }
 
 .envelope-container:hover {
   transform: scale(1.03);
+}
+
+.envelope-container.open {
+  pointer-events: none;
+  opacity: 0;
+  transform: scale(0.8);
 }
 
 /* SOBRE */
@@ -455,6 +461,11 @@ document.getElementById("envelopeContainer").onclick = function() {
   
   // Ocultar hint
   document.getElementById("hint").classList.add("hide");
+  
+  // Ocultar el sobre completamente después de la animación
+  setTimeout(() => {
+    this.style.display = "none";
+  }, 1500);
   
   // Mostrar carta después de la animación del sobre
   setTimeout(() => {
