--- a/index.html
+++ b/index.html
@@ -13,25 +13,19 @@
 }
 
 body {
-  min-height: 100vh;
-  background-color: #f8b4c6;
-  background-image: none;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  overflow-x: hidden;
-  transition: background-color 1.5s ease, background-image 1.5s ease;
 }
+
 
 body.opened {
   background-color: #1a1a1a;
   background-image: url('fondo-flores.jpg');
+  background-size: contain;
 }
+
 
 /* TEXTO HINT */
 .hint {
