--- a/index.html
+++ b/index.html
@@ -11,27 +11,15 @@
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-/* Antes de abrir la carta */
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #ff6f91; /* rosa como el sobre */
-  transition: all 1s ease;
+  min-height: 100vh;
+  background-color: #111;
+  transition: background 1s;
 }
-
-/* Después de abrir la carta */
-body.opened {
-  background-color: #1a1a1a; /* oscuro detrás de la carta */
-  background-image: url('fondo-flores.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-
 
 /* TEXTO HINT */
 .hint {
@@ -44,15 +32,13 @@ body.opened {
   position: relative;
   z-index: 10;
 }
-
 .hint.hide {
   opacity: 0;
   transform: translateY(-30px);
   pointer-events: none;
 }
-
 @keyframes float {
-  0%, 100% { transform: translateY(0); }
+  0%,100% { transform: translateY(0); }
   50% { transform: translateY(-10px); }
 }
 
@@ -66,15 +52,12 @@ body.opened {
   z-index: 10;
   transition: all 0.3s, opacity 1s 1.2s;
 }
-
 .envelope-container:hover {
   transform: scale(1.03);
 }
-
 .envelope-container.open {
   pointer-events: none;
   opacity: 0;
-  transform: scale(0.8);
 }
 
 /* SOBRE */
@@ -88,9 +71,8 @@ body.opened {
   box-shadow: 0 15px 40px rgba(0,0,0,0.3);
   animation: idle 3s ease-in-out infinite;
 }
-
 @keyframes idle {
-  0%, 100% { transform: translateY(0); }
+  0%,100% { transform: translateY(0); }
   50% { transform: translateY(-5px); }
 }
 
@@ -108,14 +90,9 @@ body.opened {
   z-index: 3;
 }
 
-.envelope-container.open .envelope {
-  animation: chest 1s ease-in-out forwards;
-}
-
-.envelope-container.open .flap {
-  transform: rotateX(180deg);
-}
-
+/* ANIMACION APERTURA SOBRE */
+.envelope-container.open .envelope { animation: chest 1s ease-in-out forwards; }
+.envelope-container.open .flap { transform: rotateX(180deg); }
 @keyframes chest {
   0% { transform: scale(1) rotate(0deg); }
   30% { transform: scale(1.1) rotate(3deg); }
@@ -126,14 +103,14 @@ body.opened {
 
 /* CARTA */
 .letter {
-  background: rgba(20, 20, 20, 0.95);
-  backdrop-filter: blur(10px);
-  padding: 35px 30px 30px 30px;
+  background: url('fondo-carta.png') no-repeat center center;
+  background-size: cover;
   border-radius: 20px;
   max-width: 550px;
   width: 90%;
   min-height: 600px;
   margin: 0 auto;
+  padding: 35px 30px;
   box-shadow: 0 30px 60px rgba(0,0,0,0.8);
   transform: translateY(100px);
   opacity: 0;
@@ -143,13 +120,20 @@ body.opened {
   border: 3px solid rgba(255, 111, 145, 0.5);
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
-
+.letter::before {
+  content:"";
+  position:absolute;
+  inset:0;
+  background: rgba(20,20,20,0.4);
+  border-radius:20px;
+  z-index:1;
+}
 .letter.show {
   transform: translateY(0);
   opacity: 1;
 }
-
 .letter h1 {
   color: #ff99b8;
   margin-bottom: 18px;
@@ -157,9 +141,9 @@ body.opened {
   font-size: 28px;
   text-shadow: 0 3px 15px rgba(255, 111, 145, 0.6);
   font-weight: 600;
+  position: relative;
+  z-index: 2;
 }
-
-/* IMAGEN */
 .letter img {
   width: 100%;
   max-width: 300px;
@@ -168,9 +152,11 @@ body.opened {
   border-radius: 12px;
   box-shadow: 0 8px 25px rgba(0,0,0,0.5);
   border: 3px solid rgba(255, 139, 171, 0.5);
+  position: relative;
+  z-index: 2;
 }
 
-/* MENSAJE CON EFECTO TYPEWRITER */
+/* MENSAJE TYPEWRITER */
 #message {
   color: #ffd6e0;
   font-size: 17px;
@@ -183,42 +169,29 @@ body.opened {
   word-wrap: break-word;
   overflow-wrap: break-word;
   width: 100%;
+  position: relative;
+  z-index: 2;
 }
 
-/* RAMO DE FLORES - USANDO IMAGEN REAL */
+/* RAMO DE FLORES */
 .bouquet-container {
   width: 130px;
+  max-height: 200px;
   margin: 15px auto 0 auto;
   position: relative;
   opacity: 0;
   animation: fadeInBouquet 1s ease forwards 2s;
+  z-index: 2;
   filter: drop-shadow(0 6px 15px rgba(0,0,0,0.5));
 }
-
 @keyframes fadeInBouquet {
-  0% { 
-    opacity: 0;
-    transform: translateY(20px) scale(0.9);
-  }
-  100% { 
-    opacity: 1;
-    transform: translateY(0) scale(1);
-  }
+  0% { opacity:0; transform:translateY(20px) scale(0.9); }
+  100% { opacity:1; transform:translateY(0) scale(1); }
 }
+.bouquet-wrapper { position: relative; width: 100%; animation: breathe 3.5s ease-in-out infinite 3s; }
+@keyframes breathe { 0%,100%{transform:scale(1);}50%{transform:scale(1.05);} }
 
-/* Contenedor con animación de respiración */
-.bouquet-wrapper {
-  position: relative;
-  width: 100%;
-  animation: breathe 3.5s ease-in-out infinite 3s;
-}
-
-@keyframes breathe {
-  0%, 100% { transform: scale(1); }
-  50% { transform: scale(1.05); }
-}
-
-/* Corazones flotantes */
+/* CORAZONES FLOTANTES */
 .hearts {
   position: absolute;
   top: -35px;
@@ -226,9 +199,9 @@ body.opened {
   width: 100%;
   height: 40px;
   pointer-events: none;
-  z-index: 10;
+  z-index: 2;
+  overflow: hidden;
 }
-
 .heart {
   position: absolute;
   font-size: 18px;
@@ -236,165 +209,44 @@ body.opened {
   opacity: 0;
   filter: drop-shadow(0 2px 6px rgba(0,0,0,0.4));
 }
-
-.heart:nth-child(1) {
-  left: 10%;
-  animation-delay: 3.5s;
-}
-
-.heart:nth-child(2) {
-  left: 50%;
-  animation-delay: 4.2s;
-}
-
-.heart:nth-child(3) {
-  left: 85%;
-  animation-delay: 4.9s;
-}
-
+.heart:nth-child(1){ left:10%; animation-delay:3.5s; }
+.heart:nth-child(2){ left:50%; animation-delay:4.2s; }
+.heart:nth-child(3){ left:85%; animation-delay:4.9s; }
 @keyframes floatHeart {
-  0% {
-    transform: translateY(0) scale(0);
-    opacity: 0;
-  }
-  20% {
-    opacity: 1;
-    transform: translateY(-18px) scale(1);
-  }
-  80% {
-    opacity: 0.9;
-  }
-  100% {
-    transform: translateY(-45px) scale(1.3);
-    opacity: 0;
-  }
+  0% { transform: translateY(0) scale(0); opacity:0; }
+  20% { transform: translateY(-18px) scale(1); opacity:1; }
+  80% { opacity:0.9; }
+  100% { transform: translateY(-45px) scale(1.3); opacity:0; }
 }
 
-/* Imagen del ramo - capa base (completa pero oculta) */
-.bouquet-image {
-  width: 100%;
-  height: auto;
-  display: block;
-  position: relative;
+/* RAMO PARTES */
+.bouquet-aspect-ratio{position:relative;width:100%;padding-bottom:120%;}
+.bouquet-part{position:absolute;top:0;left:0;width:100%;height:100%;background-image:url('ramo-flores.png');background-size:contain;background-position:center;background-repeat:no-repeat;}
+.bouquet-flowers { clip-path: polygon(0 0,100% 0,100% 50%,0 50%); animation: revealFlowers 1s ease-out forwards; animation-delay:2.2s; opacity:0; }
+@keyframes revealFlowers { 0%{opacity:0; transform:translateY(-20px) scale(0.8);} 100%{opacity:1; transform:translateY(0) scale(1);} }
+.bouquet-stems { clip-path: polygon(0 50%,100% 50%,100% 85%,0 85%); animation: revealStems 0.8s ease-out forwards; animation-delay:2.8s; opacity:0; transform-origin:center top; }
+@keyframes revealStems { 0%{opacity:0; transform:scaleY(0);} 100%{opacity:1; transform:scaleY(1);} }
+.bouquet-bow { clip-path: polygon(0 85%,100% 85%,100% 100%,0 100%); animation: revealBow 0.6s cubic-bezier(0.68,-0.55,0.265,1.55) forwards; animation-delay:3.3s; opacity:0; }
+@keyframes revealBow { 0%{opacity:0; transform:scale(0) rotate(-180deg);} 70%{transform:scale(1.15) rotate(10deg);} 100%{opacity:1; transform:scale(1) rotate(0deg);} }
+
+/* RESPONSIVE */
+@media(max-width:600px){
+  .envelope-container{width:280px;height:190px;}
+  .letter{padding:30px 22px 25px 22px; max-width:95%;}
+  .letter h1{font-size:24px; margin-bottom:15px;}
+  .letter img{max-width:260px;margin-bottom:15px;}
+  #message{font-size:15px;min-height:200px;line-height:1.6;margin:20px 0 30px 0;}
+  .bouquet-container{width:110px;}
+  .heart{font-size:16px;}
 }
 
-/* Animación por partes usando clip-path */
-.bouquet-part {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('ramo-flores.png');
+/* FONDO AL ABRIR */
+body.opened {
+  background-color: #1a1a1a;
+  background-image: url('fondo-flores.jpg');
   background-size: contain;
-  background-position: center;
   background-repeat: no-repeat;
-}
-
-/* Parte 1: Flores (parte superior - 0% a 50%) */
-.bouquet-flowers {
-  clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
-  animation: revealFlowers 1s ease-out forwards;
-  animation-delay: 2.2s;
-  opacity: 0;
-}
-
-@keyframes revealFlowers {
-  0% {
-    opacity: 0;
-    transform: translateY(-20px) scale(0.8);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0) scale(1);
-  }
-}
-
-/* Parte 2: Tallos (parte media - 50% a 85%) */
-.bouquet-stems {
-  clip-path: polygon(0 50%, 100% 50%, 100% 85%, 0 85%);
-  animation: revealStems 0.8s ease-out forwards;
-  animation-delay: 2.8s;
-  opacity: 0;
-  transform-origin: center top;
-}
-
-@keyframes revealStems {
-  0% {
-    opacity: 0;
-    transform: scaleY(0);
-  }
-  100% {
-    opacity: 1;
-    transform: scaleY(1);
-  }
-}
-
-/* Parte 3: Moño (parte inferior - 85% a 100%) */
-.bouquet-bow {
-  clip-path: polygon(0 85%, 100% 85%, 100% 100%, 0 100%);
-  animation: revealBow 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
-  animation-delay: 3.3s;
-  opacity: 0;
-}
-
-@keyframes revealBow {
-  0% {
-    opacity: 0;
-    transform: scale(0) rotate(-180deg);
-  }
-  70% {
-    transform: scale(1.15) rotate(10deg);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(0deg);
-  }
-}
-
-/* Contenedor para mantener el aspect ratio */
-.bouquet-aspect-ratio {
-  position: relative;
-  width: 100%;
-  padding-bottom: 120%; /* Ajusta según el aspect ratio de tu imagen */
-}
-
-/* Responsive */
-@media (max-width: 600px) {
-  .envelope-container {
-    width: 280px;
-    height: 190px;
-  }
-  
-  .letter {
-    padding: 30px 22px 25px 22px;
-    max-width: 95%;
-  }
-  
-  .letter h1 {
-    font-size: 24px;
-    margin-bottom: 15px;
-  }
-  
-  .letter img {
-    max-width: 260px;
-    margin-bottom: 15px;
-  }
-  
-  #message {
-    font-size: 15px;
-    min-height: 200px;
-    line-height: 1.6;
-    margin: 20px 0 30px 0;
-  }
-  
-  .bouquet-container {
-    width: 110px;
-  }
-  
-  .heart {
-    font-size: 16px;
-  }
+  background-position: center top;
 }
 </style>
 </head>
@@ -412,18 +264,14 @@ body.opened {
   <h1>Hola mi amor 💕</h1>
   <img src="foto.jpg" alt="Para ti">
   <div id="message"></div>
-  
-  <!-- Ramo de flores usando imagen real -->
   <div class="bouquet-container">
     <div class="hearts">
       <span class="heart">💕</span>
       <span class="heart">💗</span>
       <span class="heart">💖</span>
     </div>
-    
     <div class="bouquet-wrapper">
       <div class="bouquet-aspect-ratio">
-        <!-- Cada parte del ramo aparece por separado -->
         <div class="bouquet-part bouquet-flowers"></div>
         <div class="bouquet-part bouquet-stems"></div>
         <div class="bouquet-part bouquet-bow"></div>
@@ -433,47 +281,28 @@ body.opened {
 </div>
 
 <script>
-const message = `Esta pagina es solo para ti.
-Gracias por estar conmigo.
-Te quiero mas de lo que estas palabras pueden decir.`;
-
+const message = "Esta pagina es solo para ti. Gracias por estar conmigo. Te quiero mas de lo que estas palabras pueden decir.";
 let charIndex = 0;
-
 function typeWriter() {
   if (charIndex < message.length) {
     const char = message.charAt(charIndex);
-    document.getElementById("message").innerHTML += 
-      char === "\n" ? "<br>" : char;
+    document.getElementById("message").innerHTML += char === "\n" ? "<br>" : char;
     charIndex++;
     setTimeout(typeWriter, 60);
   }
 }
 
 document.getElementById("envelopeContainer").onclick = function() {
-  // Prevenir múltiples clicks
-  if (this.classList.contains("open")) return;
-  
-  // Abrir sobre
+  if(this.classList.contains("open")) return;
   this.classList.add("open");
   this.style.cursor = "default";
-  
-  // Cambiar fondo - imagen de flores alrededor
   document.body.classList.add("opened");
-  
-  // Ocultar hint
   document.getElementById("hint").classList.add("hide");
-  
-  // Ocultar el sobre completamente después de la animación
-  setTimeout(() => {
-    this.style.display = "none";
-  }, 1500);
-  
-  // Mostrar carta después de la animación del sobre
-  setTimeout(() => {
+  setTimeout(()=>{ this.style.display = "none"; },1500);
+  setTimeout(()=>{
     document.getElementById("letter").classList.add("show");
-    // Iniciar efecto typewriter
-    setTimeout(typeWriter, 800);
-  }, 1200);
+    setTimeout(typeWriter,800);
+  },1200);
 };
 </script>
 
